--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.compression.enabled=true
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/smaheal?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-spring.datasource.username=ssafy
-spring.datasource.password=ssafy
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://j3b108.p.ssafy.io/ssafyai
+spring.datasource.username=ssafy108
+spring.datasource.password=ssafy108
 
 logging.level.root=WARN
 logging.level.com.ssafy.vue.mappers=TRACE
