--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -24,8 +24,19 @@
    </properties>
 
    <dependencies>
-   
-         <dependency>
+      <dependency>
+			<groupId>org.python</groupId>
+			<artifactId>jython-standalone</artifactId>
+			<version>2.7.2</version>
+      </dependency>
+      
+      <dependency>
+			<groupId>org.openpnp</groupId>
+			<artifactId>opencv</artifactId>
+			<version>3.4.2-0</version>
+		</dependency>
+
+      <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-exec</artifactId>
          <version>1.3</version>
