--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -23,6 +23,13 @@
       <jjwt.version>0.9.0</jjwt.version>
    </properties>
 
+   <repositories>
+    <repository>
+      <id>google-api-services</id>
+      <url>http://google-api-client-libraries.appspot.com/mavenrepo</url>
+    </repository>
+  </repositories>
+
    <dependencies>
       <dependency>
 			<groupId>org.python</groupId>
@@ -193,6 +200,30 @@
          <version>1.2.1</version> 
       </dependency>
       
+      <!-- YouTube Data V3 support -->
+      <dependency>
+         <groupId>com.google.apis</groupId>
+         <artifactId>google-api-services-youtube</artifactId>
+         <version>v3-rev222-1.25.0</version>
+      </dependency>
+
+      <dependency>
+         <groupId>com.google.http-client</groupId>
+         <artifactId>google-http-client-jackson2</artifactId>
+         <version>1.36.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.google.oauth-client</groupId>
+         <artifactId>google-oauth-client-jetty</artifactId>
+         <version>1.31.0</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+      <dependency>
+         <groupId>com.google.code.gson</groupId>
+         <artifactId>gson</artifactId>
+         <version>2.8.5</version>
+      </dependency>
 
       
    </dependencies>
