--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "moment": "^2.28.0",
     "vue": "^2.6.11",
     "vue-infinite-loading": "^2.4.5",
+    "vue-lazy-youtube-video": "^2.2.1",
     "vue-router": "^3.2.0",
     "vue-web-cam": "^1.9.0",
+    "vue-youtube": "^1.4.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
