--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 backend/log/log.log
+frontend/src/util/api.js
+frontend/src/util/api2.js
+frontend/src/util/http-common.js
+frontend/src/util/http-common2.js
+frontend/src/util/http-common3.js
