--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 server.compression.enabled=true
+server.port=8080
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=smaheal_keystore.jks.old
+server.ssl.key-password=ssafy108
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://j3b108.p.ssafy.io/ssafyai
