--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,8 +2,12 @@ server.compression.enabled=true
 server.port=8080
 server.ssl.enabled=true
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store=smaheal_keystore.jks.old
+server.ssl.key-store=/etc/letsencrypt/archive/smaheal_keystore.jks
+server.ssl.key-store-password=ssafy108
 server.ssl.key-password=ssafy108
+server.ssl.key-alias=ssafy108
+server.ssl.trust-store=/etc/letsencrypt/archive/smaheal_trust_store.ts
+server.ssl.trust-store-password=ssafy108
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://j3b108.p.ssafy.io/ssafyai
