--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "audiobuffer-to-wav": "^1.0.0",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "moment": "^2.28.0",
