--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive",
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe"
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
