--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "audiobuffer-to-wav": "^1.0.0",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "countup.js": "^2.0.7",
     "moment": "^2.28.0",
     "vue": "^2.6.11",
+    "vue-countup-v2": "^4.0.0",
     "vue-infinite-loading": "^2.4.5",
     "vue-lazy-youtube-video": "^2.2.1",
     "vue-router": "^3.2.0",
