--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "countup.js": "^2.0.7",
+    "face-api.js": "^0.22.2",
     "moment": "^2.28.0",
     "vue": "^2.6.11",
     "vue-countup-v2": "^4.0.0",
