--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.compression.enabled=true
 server.port=8080
-server.ssl.enabled=true
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=/etc/letsencrypt/archive/cert_and_key.p12
-server.ssl.key-store-password=ssafy108
+#server.ssl.enabled=true
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=/etc/letsencrypt/archive/cert_and_key.p12
+#server.ssl.key-store-password=ssafy108
 
 #server.ssl.key-password=ssafy108
 #server.ssl.key-alias=ssafy108
